--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2608,7 +2608,7 @@ collections:
                           label: "Big Size",
                           name: "big-size",
                           widget: "boolean",
-                          default: "false",
+                          default: false,
                           required: false,
                         },
                         {
