--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -757,6 +757,26 @@ collections:
                                 },
                               ],
                           },
+                          {
+                            label: "NewVideo",
+                            name: "newVideo",
+                            widget: "object",
+                            fields:
+                              [
+                                {
+                                  label: "New Video File",
+                                  name: "newVideoFile",
+                                  widget: "file",
+                                  required: false,
+                                },
+                                {
+                                  label: "Caption",
+                                  name: "caption",
+                                  widget: "string",
+                                  required: false,
+                                },
+                              ],
+                          },
                         ],
                     },
                   ],
@@ -2398,127 +2418,6 @@ collections:
               required: false,
               types:
                 [
-                  {
-                    label: "Image Section",
-                    name: "image-section",
-                    widget: "object",
-                    fields:
-                      [
-                        { label: "Title", name: "title", widget: "string" },
-                        {
-                          label: "Column Start",
-                          name: "column-start",
-                          widget: "select",
-                          required: false,
-                          options:
-                            [
-                              "1",
-                              "2",
-                              "3",
-                              "4",
-                              "5",
-                              "6",
-                              "7",
-                              "8",
-                              "9",
-                              "10",
-                              "11",
-                            ],
-                        },
-                        {
-                          label: "Column End",
-                          name: "column-end",
-                          widget: "select",
-                          required: false,
-                          options:
-                            [
-                              "2",
-                              "3",
-                              "4",
-                              "5",
-                              "6",
-                              "7",
-                              "8",
-                              "9",
-                              "10",
-                              "11",
-                              "12",
-                              "13",
-                            ],
-                        },
-                        {
-                          label: "Images",
-                          name: "images",
-                          widget: "list",
-                          required: false,
-                          types:
-                            [
-                              {
-                                label: "iFrame",
-                                name: "iFrame",
-                                widget: "object",
-                                fields:
-                                  [
-                                    {
-                                      label: "iFrame Link",
-                                      name: "iFrame-link",
-                                      widget: "string",
-                                      required: false,
-                                    },
-                                    {
-                                      label: "Caption",
-                                      name: "caption",
-                                      widget: "string",
-                                      required: false,
-                                    },
-                                  ],
-                              },
-                              {
-                                label: "Image",
-                                name: "image",
-                                widget: "object",
-                                fields:
-                                  [
-                                    {
-                                      label: "Image File",
-                                      name: "imageFile",
-                                      widget: "image",
-                                      required: false,
-                                      allow_multiple: true,
-                                    },
-                                    {
-                                      label: "Caption",
-                                      name: "caption",
-                                      widget: "string",
-                                      required: false,
-                                    },
-                                  ],
-                              },
-                              {
-                                label: "Video",
-                                name: "video",
-                                widget: "object",
-                                fields:
-                                  [
-                                    {
-                                      label: "Video File",
-                                      name: "videoFile",
-                                      widget: "file",
-                                      required: false,
-                                      allow_multiple: true,
-                                    },
-                                    {
-                                      label: "Caption",
-                                      name: "caption",
-                                      widget: "string",
-                                      required: false,
-                                    },
-                                  ],
-                              },
-                            ],
-                        },
-                      ],
-                  },
                   {
                     label: "Text Section",
                     name: "text-section",
