--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1636,6 +1636,18 @@ collections:
                     fields:
                       [
                         {
+                          label: "Layout",
+                          name: "layout",
+                          widget: "select",
+                          required: false,
+                          options:
+                            [
+                              "block",
+                              "grid",
+                              "carousel"
+                            ],
+                        },
+                        {
                           label: "Column Start",
                           name: "column-start",
                           widget: "select",
