--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2552,7 +2552,7 @@ collections:
                     widget: "object",
                     fields:
                       [
-                        { label: "Title", name: "title", widget: "string" },
+                        { label: "Title", name: "title", widget: "string", required: false },
                         {
                           label: "Column Start",
                           name: "column-start",
